@@ -1,3 +1,7 @@
+2003-11-08  Per Bothner  <per@bothner.com>
+
+	* XQuery.java (parse):  Update to take a Lexer rather than an InPort.
+
 2003-11-02  Per Bothner  <per@bothner.com>
 
 	* XQParser.java (peekOperator):  Return if EOL_TOKEN and 0 nesting.
